<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".Fragment.AddOrder">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="@font/aller"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/place_name"
                    android:textColor="#545454"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:id="@+id/eventName"
                        />
                </LinearLayout>
                <TextView
                    android:fontFamily="@font/aller"
                    android:textColor="#545454"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="5">
                    <Button
                        android:fontFamily="@font/aller"
                        android:id="@+id/btn"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/button"
                        android:text="@string/locat"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:background="@drawable/linear_white">
                        <EditText
                            android:editable="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#fff"
                            android:id="@+id/locationName"
                            />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:fontFamily="@font/aller"
                    android:textColor="#545454"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/DateTxt" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_white">
                    <EditText
                        android:editable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:id="@+id/eventDate"
                        />
                </LinearLayout>
                <TextView
                    android:fontFamily="@font/aller"
                    android:textColor="#545454"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:id="@+id/peopleCluster"
                        />
                </LinearLayout> <TextView
                android:fontFamily="@font/aller"
                android:textColor="#545454"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedBack"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_white">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#fff"
                        android:id="@+id/eventContent"
                        />
                </LinearLayout>
                <Button
                    android:fontFamily="@font/aller"
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnUpload"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:background="@drawable/btn_green"
                    android:text="@string/add_event_assign"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>